--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
+absl-py==0.9.0
 appdirs==1.4.4
 attrs==19.3.0
 backcall==0.2.0
 black==19.10b0
+cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 dataclasses==0.7
 decorator==4.4.2
 filelock==3.0.12
+google-auth==1.19.2
+google-auth-oauthlib==0.4.1
+grpcio==1.30.0
 idna==2.10
+importlib-metadata==1.7.0
 ipdb==0.13.3
 ipython==7.16.1
 ipython-genutils==0.2.0
 isort==5.1.2
 jedi==0.17.2
 joblib==0.16.0
+Markdown==3.2.2
 numpy==1.19.0
+oauthlib==3.1.0
 packaging==20.4
 pandas==1.0.5
 parso==0.7.0
@@ -25,18 +33,27 @@ pickleshare==0.7.5
 Pillow==7.2.0
 pkg-resources==0.0.0
 prompt-toolkit==3.0.5
+protobuf==3.12.2
 ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 Pygments==2.6.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 regex==2020.7.14
 requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
 sacremoses==0.0.43
 scikit-learn==0.23.1
 scipy==1.5.1
 sentencepiece==0.1.91
 six==1.15.0
+tabulate==0.8.7
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.7.0
+tensorboardX==2.1
 threadpoolctl==2.1.0
 tokenizers==0.8.1rc1
 toml==0.10.1
@@ -48,3 +65,5 @@ transformers==3.0.2
 typed-ast==1.4.1
 urllib3==1.25.9
 wcwidth==0.2.5
+Werkzeug==1.0.1
+zipp==3.1.0
